--- a/HumanObjCApp/Podfile
+++ b/HumanObjCApp/Podfile
@@ -1,6 +1,6 @@
 # Uncomment the next line to define a global platform for your project
- platform :ios, '9.0'
-source 'git@github.com:biodigital-inc/human-ios-sdk.git'
+platform :ios, '9.0'
+source 'https://github.com/biodigital-inc/human-ios-sdk.git'
 
 target 'HumanObjCApp' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
