--- a/HumanObjCApp/Podfile
+++ b/HumanObjCApp/Podfile
@@ -7,6 +7,6 @@ target 'HumanObjCApp' do
   use_frameworks!
 
   # Pods for HumanSDKApp
-  pod 'HumanKit', '2.0.1'
+  pod 'HumanKit', '2.0.2-universal'
 
 end
