--- a/HumanSwiftApp/Podfile
+++ b/HumanSwiftApp/Podfile
@@ -1,12 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '12.0'
 source 'https://github.com/biodigital-inc/human-ios-sdk.git'
 
 target 'HumanSwiftApp' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for HumanSDKApp
-  pod 'HumanKit', '2.75.1'
+  # Pods for HumanSwiftApp
+  pod 'HumanKit', '134.1'
 
 end
